--- a/src/style/_config.scss
+++ b/src/style/_config.scss
@@ -2,6 +2,9 @@
 
 // Font size
 $font-stack: Roboto, sans-serif;
+$base-font-size-desktop: 18px;
+$base-font-size-mobile: 18px;
+
 $primary-color: #0d3880;
 $secondary-color: #1d9ede;
 $success-color: #3fa833;
