--- a/src/style/_config.scss
+++ b/src/style/_config.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto');
+@import url('https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900');
 
 // Font size
 $font-stack: Roboto, sans-serif;
