--- a/src/components/CheckoutForm.scss
+++ b/src/components/CheckoutForm.scss
@@ -1,13 +1,12 @@
 @import '../style/shadow';
+@import '../style/card';
 
 .checkout-card {
-  background-color: #fff;
-  padding: 24px;
+  @extend .card;
   position: fixed;
   width: 300px;
-  right: 8px;
-  bottom: 8px;
-  @include shadow(2);
+  right: 16px;
+  bottom: 16px;
 
   .card-header {
     &__title {
@@ -57,7 +56,20 @@
         text-transform: uppercase;
       }
     }
+  }
 
-
+  .card-footer {
+    &__button {
+      border: 0px;
+      padding: 10px;
+      width: 100%;
+      font-size: 0.7em;
+      letter-spacing: 1px;
+      text-transform: uppercase;
+      font-weight: 900;
+      background-color: #3fa833;
+      color: #fff;
+      cursor: pointer;
+    }
   }
 }
