--- a/src/components/CheckoutForm.scss
+++ b/src/components/CheckoutForm.scss
@@ -33,27 +33,37 @@
 
     .subtotal {
       margin: 4px 0px;
-      text-align: right;
+      // text-align: right;
       font-size: 0.8em;
       font-weight: 300;
 
       &__label {
         font-size: 0.8em;
+        letter-spacing: 2px;
         line-height: 1em;
         text-transform: uppercase;
+      }
+
+      &__value {
+        text-align: right;
       }
     }
 
     .total {
       margin: 4px 0px;
-      text-align: right;
+      // text-align: right;
       font-size: 1em;
       font-weight: 600;
 
       &__label {
         font-size: 0.6em;
+        letter-spacing: 2px;
         line-height: 1.6em;
         text-transform: uppercase;
+      }
+
+      &__value {
+        text-align: right;
       }
     }
   }
