--- a/src/style/_config.scss
+++ b/src/style/_config.scss
@@ -1,7 +1,7 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900');
+@import url('https://fonts.googleapis.com/css?family=Lato:300,400,500,700,900');
 
 // Font size
-$font-stack: Roboto, sans-serif;
+$font-stack: Lato, sans-serif;
 $base-font-size-desktop: 18px;
 $base-font-size-mobile: 18px;
 
