feat(cart): grand total

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,6 +1,7 @@
 @import './style/config';
 @import './style/shadow';
 @import './style/card';
+@import './style/button';
 
 .main-container {
   max-width: 1200px;
