style(login): re design login page

--- a/src/components/ProductCard.scss
+++ b/src/components/ProductCard.scss
@@ -23,14 +23,14 @@
 
   .__deal {
     margin-bottom: 12px;
+    background-color: lighten($success-color, 50%);
+    border-radius: 4px;
+    border: 1px solid $success-color;
+    color: $success-color;
+    padding: 8px 16px 12px 16px;
 
     span {
       font-size: 0.75em;
-      padding: 8px;
-      border-radius: 4px;
-      color: $success-color;
-      border: 1px solid $success-color;
-      background-color: lighten($success-color, 50%);
     }
   }
 
