--- a/src/components/CheckoutForm.scss
+++ b/src/components/CheckoutForm.scss
@@ -1,5 +1,6 @@
 @import '../style/shadow';
 @import '../style/card';
+@import '../style/config';
 
 .checkout-card {
   @extend .card;
@@ -33,7 +34,6 @@
 
     .subtotal {
       margin: 4px 0px;
-      // text-align: right;
       font-size: 0.8em;
       font-weight: 300;
 
@@ -49,9 +49,26 @@
       }
     }
 
+    .deductions {
+      margin: 4px 0px;
+      font-size: 0.8em;
+      color: $success-color;
+      font-weight: 400;
+
+      &__label {
+        font-size: 0.8em;
+        letter-spacing: 2px;
+        line-height: 1em;
+        text-transform: uppercase;
+      }
+
+      &__value {
+        text-align: right;
+      }
+    }
+
     .total {
       margin: 4px 0px;
-      // text-align: right;
       font-size: 1em;
       font-weight: 600;
 
